# Test_task_elevator

./: README.txt
src/: BoundingBox.h  CMakeLists.txt  Camera.cpp  Camera.h  Elevator.h  ElevatorDoor.cpp  ElevatorShaft.cpp  ElevatorShaft.h  Engine.cpp  main.cpp
src/Elevator/: BoundingBox.cpp  Button.cpp  Button.h  CMakeLists.txt  CallElevatorButton.cpp  CallElevatorButton.h  DoorButton.cpp  DoorButton.h  Elevator.cpp  ElevatorDoor.h  ElevatorPlatform.cpp  ElevatorPlatform.h  Engine.h  FloorButton.cpp  FloorButton.h  Point.cpp  Point.h
src/GLEW/lib/: glew32.lib
